force-app/main/default/objects/Contact/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Account</label>
    <type>Checkbox</type>
</CustomField>