force-app/main/default/objects/Contact/fields/External_ERP_ID_Populated__c.field-meta.xml
<CustomField>
    <fullName>External_ERP_ID_Populated__c</fullName>
    <formula>NOT(ISBLANK(External_ERP_ID__c))</formula>
    <label>External ERP ID Populated</label>
    <type>Checkbox</type>
</CustomField>