force-app/main/default/objects/Contact/fields/SUG_CONTACTID__c.field-meta.xml
<CustomField>
    <fullName>SUG_CONTACTID__c</fullName>
    <label>SUG CONTACTID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>