force-app/main/default/objects/Contact/validationRules/FirstName_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_is_mandatory</fullName>
    <active>true</active>
    <description>FirstName_is_mandatory</description>
    <errorConditionFormula>AND(
$Setup.Bypass_Configuration__c.Contact_Validation_Rule__c	= FALSE,
ISBLANK( FirstName )
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is required.</errorMessage>
</ValidationRule>